Fazendo testes com o github

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-ESTE É UM PROJETO DE TESTE PARA TESTAR O GIT DO ASSEMBLA
+ESTE É UM PROJETO DE TESTE PARA TESTAR O GIT DO ASSEMBLA E DO GITHUB TAMBÉM!
